[5.2.1]
- fixed YAML on Android (previous patch was not working)
- removed App.thread method, now Thread works as in normal Ruby
- now ruby runtime is properly terminated when app closes. This fixes mainly activity shutdown and reopen crashes on Android and prevents memory leaks

[5.2.0]
- removed some temporary files what I forgot to remove
- removed some debug code what I forgot to remove
- small API changes for Graphics.print, Graphics.draw, Graphics.fill and Physics.fixture
- moved some more Java code to Ruby
- updated default logo, icons and loading screen
- added automatic icon resizing. Now, instead of adding custom icon to project/non for each required icon dimension for each platform, compiler will resize one icon.png with reccomened size of 512x512 pixels to correct dimensions required by specified platform
- updated splash screens for iOS platforms
- moved loading bar to bottom of screen
- fixed major bug with Application module
- fixed major bug with YAML loading on Android. This caused to crash of projects trying to load config.yml on Android devices
- forgot to remove stdlib dependency, so now it is done
- added comparison checks for assets. Before, each time project was built, all assets was copied. Now compiler checks if they are modified
- added "clean" task to CLI
- removed --compile flag for start task

[5.1.0]
- added --compile (example: non build desktop --compile) flag which will set that all ruby code is compiled to java bytecode during build. This means performance almost equal to native Ruby (sometimes even faster) but this also means a bit slower start and build tasks. Then to force load your optimized code, just add .class suffix when using require method
- removed ALL ruby builtin and standard libraries for maximum performamce and cross-platform compatibility. Anyways, NÖN is a game engine, and all important is included in it's own libraries