@@ -10,23 +10,19 @@ module Mouse
         self.setVisible(false)
     end
     
-    def self.setVisible(val)
-        Gdx.input.setCursorCatched(not(val))
-    end
-    
-    def self.getX
+    def self.x
         Gdx.input.getX()
     end
     
-    def self.getY
+    def self.y
         Gdx.input.getY()
     end
     
-    def self.setPosition(x, y)
+    def self.move(x, y)
         Gdx.input.setCursorPosition(x, y)
     end
     
-    def self.isDown(button = "left")
+    def self.down(button = :left)
         buttoncode = Non.getButton(name)
         Gdx.input.isButtonPressed(buttoncode)
     end
